base/infrastructure/tailscale/egress/o/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: o-egress
  namespace: infrastructure
spec:
  type: ExternalName
  externalName: seerr.production.svc.cluster.local
  ports:
    - name: http
      port: 80
      protocol: TCP
