base/infrastructure/tailscale/egress/o/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: o-web
  namespace: infrastructure
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`o.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: o-egress
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: o-websecure
  namespace: infrastructure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`o.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: o-egress
          port: 80
  tls:
    secretName: o-tls
